--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -38,23 +38,38 @@
                 android:layout_height="wrap_content"
                 android:text="@string/cartitem_qty_label"
                 android:textSize="16dp"/>
-            <Spinner
-                android:id="@+id/cartitem_qty"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="16dp"/>
-            <!--<EditText-->
+            <!--<AutoCompleteTextView-->
                 <!--android:id="@+id/cartitem_qty"-->
                 <!--android:layout_width="wrap_content"-->
                 <!--android:layout_height="wrap_content"-->
+                <!--android:completionThreshold="1"-->
                 <!--android:numeric="integer"-->
                 <!--android:imeOptions="actionDone"-->
                 <!--android:textSize="16dp"/>-->
+            <!--<Spinner-->
+                <!--android:id="@+id/cartitem_qty"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:textSize="16dp"/>-->
+            <EditText
+                android:id="@+id/cartitem_qty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:numeric="integer"
+                android:imeOptions="actionDone"
+                android:selectAllOnFocus="true"
+                android:textSize="16dp"/>
             <Button
                 android:id="@+id/cartitem_delete"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:text="x"
+                />
+            <Button
+                android:id="@+id/cartitem_update"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:text="Update"
                 />
         </LinearLayout>
     </LinearLayout>
