--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -58,18 +58,24 @@
                 android:numeric="integer"
                 android:imeOptions="actionDone"
                 android:selectAllOnFocus="true"
-                android:textSize="20dp"/>
+                android:layout_marginRight="6dp"
+                android:textSize="20dp"
+                />
             <Button
                 android:id="@+id/cartitem_delete"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:text="x"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_gravity="bottom"
+                android:text="X"
+                android:textSize="14dp"
                 />
             <Button
                 android:id="@+id/cartitem_update"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:text="Update"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:layout_gravity="bottom"
+                android:text="@string/update_button"
+                android:textSize="14dp"
                 />
         </LinearLayout>
     </LinearLayout>
