--- a/app/src/main/res/layout/bundle_frame.xml
+++ b/app/src/main/res/layout/bundle_frame.xml
@@ -26,6 +26,6 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:gravity="center"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:text="@string/empty"/>
 </com.staples.mobile.cfa.widget.DataWrapper>
