--- a/app/src/main/res/layout/bundle_item_tall.xml
+++ b/app/src/main/res/layout/bundle_item_tall.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:lines="2"
         android:ellipsize="end"
-        android:textSize="16dp"/>
+        android:textSize="16sp"/>
     <com.staples.mobile.cfa.widget.RatingStars
         android:id="@+id/rating"
         style="@style/SmallRatingStars"/>
