--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -46,7 +46,7 @@
                     android:paddingLeft="4dp"
                     android:paddingRight="4dp"
                     android:gravity="center"
-                    android:textSize="24dp"
+                    android:textSize="24sp"
                     android:text="@string/staples"/>
             </LinearLayout>
             <View
@@ -66,7 +66,7 @@
                 android:gravity="center"
                 android:text=""
                 android:textColor="@android:color/white"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 app:textLeftOffset="2dp"
                 app:textBottomOffset="2dp"
                 android:src="@drawable/ic_drawer"/>
@@ -117,7 +117,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:textSize="20dp"
+                    android:textSize="20sp"
                     android:text="@string/empty"/>
             </com.staples.mobile.cfa.widget.DataWrapper>
             <!-- Right drawer (shopping cart) -->
