--- a/app/src/main/res/layout/order_track.xml
+++ b/app/src/main/res/layout/order_track.xml
@@ -10,7 +10,7 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:padding="4dp"
-        android:textSize="30dp"/>
+        android:textSize="30sp"/>
     <TextView
         android:id="@+id/status"
         android:layout_width="wrap_content"
@@ -18,5 +18,5 @@
         android:layout_gravity="center|left"
         android:gravity="center|left"
         android:padding="4dp"
-        android:textSize="14dp"/>
+        android:textSize="14sp"/>
 </LinearLayout>
