--- a/app/src/main/res/layout/sku_frame.xml
+++ b/app/src/main/res/layout/sku_frame.xml
@@ -56,7 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="4dp"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:text="@string/lorem_ipsum"/>
             <!-- Customer reviews -->
             <TextView
@@ -66,7 +66,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="4dp"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:text="@string/lorem_ipsum"/>
         </LinearLayout>
     </ScrollView>
@@ -88,7 +88,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:gravity="center"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:text="@string/empty"/>
 
     <!-- Detail page -->
@@ -109,7 +109,7 @@
         android:layout_height="wrap_content"
         android:padding="6dp"
         android:gravity="center"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:background="#00ff00"
         android:text="@string/add_to_cart"/>
 </com.staples.mobile.cfa.widget.DataWrapper>
