--- a/app/src/main/res/layout/your_store.xml
+++ b/app/src/main/res/layout/your_store.xml
@@ -11,7 +11,7 @@
         android:layout_gravity="center|left"
         android:gravity="center|left"
         android:padding="4dp"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:text="Your store: Cambridge"/>
     <TextView
         android:layout_width="wrap_content"
@@ -19,6 +19,6 @@
         android:layout_gravity="center|right"
         android:gravity="center|right"
         android:padding="4dp"
-        android:textSize="16dp"
+        android:textSize="16sp"
         android:text="Open until 9 PM"/>
 </LinearLayout>
