--- a/app/src/main/res/layout/sku_frame.xml
+++ b/app/src/main/res/layout/sku_frame.xml
@@ -104,11 +104,10 @@
     </android.support.v4.view.ViewPager>
 
     <!-- Add to cart footer -->
-    <TextView
+    <Button
+        android:id="@+id/add_to_cart"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="6dp"
-        android:gravity="center"
         android:textSize="20sp"
         android:background="#00ff00"
         android:text="@string/add_to_cart"/>
