--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -69,7 +69,7 @@
                 android:textSize="16sp"
                 app:textLeftOffset="2dp"
                 app:textBottomOffset="2dp"
-                android:src="@drawable/ic_drawer"/>
+                android:src="@drawable/cart"/>
         </LinearLayout>
         <android.support.v4.widget.DrawerLayout
             android:id="@+id/drawer_layout"
