adding overlay for progress bar

--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -147,12 +147,25 @@
                         android:choiceMode="singleChoice"
                         android:background="#ffffff"/>
                 </LinearLayout>
-                <ProgressBar
+                <RelativeLayout
                     android:id="@+id/cart_progress_bar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:visibility="gone"/>
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:visibility="gone"
+                    android:clickable="false"
+                    android:background="#aa000022" >
+                    <ProgressBar
+                        android:layout_centerInParent="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:indeterminateOnly="true" />
+                </RelativeLayout>
+                <!--<ProgressBar-->
+                    <!--android:id="@+id/cart_progress_bar"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:visibility="gone"/>-->
             </FrameLayout>
 
         </android.support.v4.widget.DrawerLayout>
