--- a/app/src/main/res/layout/sku_summary.xml
+++ b/app/src/main/res/layout/sku_summary.xml
@@ -165,11 +165,26 @@
     </TabHost>
 
     <!-- Add to cart footer -->
-    <Button
-        android:id="@+id/add_to_cart"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:background="#00ff00"
-        android:text="@string/add_to_cart"/>
+        android:orientation="horizontal"
+        android:gravity="center_horizontal">
+        <EditText
+            android:id="@+id/quantity"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:gravity="right"
+            android:inputType="number"
+            android:textSize="20sp"
+            android:hint="1"/>
+        <Button
+            android:id="@+id/add_to_cart"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:textSize="20sp"
+            android:text="@string/add_to_cart"/>
+    </LinearLayout>
 </com.staples.mobile.cfa.widget.DataWrapper>
