Add Sku set detection and lockout of add-to-cart

--- a/app/src/main/res/layout/sku_summary.xml
+++ b/app/src/main/res/layout/sku_summary.xml
@@ -177,6 +177,7 @@
             android:layout_gravity="center_vertical"
             android:gravity="right"
             android:inputType="number"
+            android:singleLine="true"
             android:textSize="20sp"
             android:hint="1"/>
         <Button
