--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -51,7 +51,7 @@
                 <!--android:layout_width="wrap_content"-->
                 <!--android:layout_height="wrap_content"-->
                 <!--android:textSize="16dp"/>-->
-            <EditText
+            <com.staples.mobile.cfa.widget.CartItemQtyEditor
                 android:id="@+id/cartitem_qty"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -76,6 +76,7 @@
                 android:layout_gravity="bottom"
                 android:text="@string/update_button"
                 android:textSize="14dp"
+                android:visibility="gone"
                 />
         </LinearLayout>
     </LinearLayout>
