--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -55,7 +55,7 @@
                 android:id="@+id/cartitem_qty"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:numeric="integer"
+                android:inputType="number"
                 android:imeOptions="actionDone"
                 android:selectAllOnFocus="true"
                 android:layout_marginRight="6dp"
