--- a/app/src/main/res/layout/lms_frame.xml
+++ b/app/src/main/res/layout/lms_frame.xml
@@ -4,14 +4,21 @@
     android:layout_height="match_parent"
 	android:orientation="vertical"
 >
-	<ListView
-		android:id="@+id/lsvBundles"
-		android:divider="@android:color/transparent"
-		android:dividerHeight="0.0dp"
-		android:drawSelectorOnTop="false"
-		android:layout_height="match_parent"
-		android:layout_marginTop="0dp"
+	<ScrollView
+		android:id="@+id/lmsScrollView"
 		android:layout_width="match_parent"
-	/>
+		android:layout_height="match_parent"
+	>
+
+		<LinearLayout
+			android:id="@+id/lmsScrollLayout"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:orientation="vertical"
+		>
+
+		</LinearLayout>
+
+	</ScrollView>
 
 </com.staples.mobile.cfa.widget.AnimatorLayout>
