--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -13,11 +13,12 @@
         <attr name="stripeThickness" format="dimension"/>
         <attr name="android:textSize"/>
     </declare-styleable>
+    <declare-styleable name="QtyEditor">
+        <attr name="maxSpinnerValue" format="integer"/>
+    </declare-styleable>
     <declare-styleable name="BadgeImageView">
         <attr name="android:text"/>
         <attr name="android:textSize"/>
         <attr name="android:textColor"/>
-        <attr name="textLeftOffset" format="dimension"/>
-        <attr name="textBottomOffset" format="dimension"/>
     </declare-styleable>
 </resources>
