Add Sku description & specifications

--- a/app/src/main/res/layout/sku_bullet_item.xml
+++ b/app/src/main/res/layout/sku_bullet_item.xml
@@ -4,8 +4,8 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
     <ImageView
-        style="@style/BulletMarkerStyle"/>
+        style="@style/SkuBulletMarkerStyle"/>
     <TextView
         android:id="@+id/bullet"
-        style="@style/BulletTextStyle"/>
+        style="@style/SkuBulletTextStyle"/>
 </LinearLayout>
