--- a/app/src/main/res/layout/sku_detail.xml
+++ b/app/src/main/res/layout/sku_detail.xml
@@ -3,8 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
-        android:id="@+id/description"
+        android:id="@+id/details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"/>
+        android:orientation="vertical"
+        android:padding="6dp"/>
 </ScrollView>
