--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -78,10 +78,11 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:padding">4dp</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:textAllCaps">true</item>
     </style>
 
-    <style name="BulletMarkerStyle">
+    <style name="SkuBulletMarkerStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">top|center_horizontal</item>
@@ -90,7 +91,7 @@
         <item name="android:paddingRight">3dp</item>
         <item name="android:src">@drawable/bullet</item>
     </style>
-    <style name="BulletTextStyle">
+    <style name="SkuBulletTextStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:padding">2dp</item>
