--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -14,6 +14,7 @@
         <attr name="android:textSize"/>
     </declare-styleable>
     <declare-styleable name="QtyEditor">
+        <attr name="android:textSize"/>
         <attr name="maxSpinnerValue" format="integer"/>
     </declare-styleable>
     <declare-styleable name="BadgeImageView">
