--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -63,7 +63,7 @@
                 <!--android:layout_marginRight="6dp"-->
                 <!--android:textSize="20dp"-->
                 <!--/>-->
-            <com.staples.mobile.cfa.widget.CartItemQtyEditor
+            <com.staples.mobile.cfa.widget.QuantityEditor
                 android:id="@+id/cartitem_qty"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
