--- a/app/src/main/res/layout/quantity_editor.xml
+++ b/app/src/main/res/layout/quantity_editor.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         />
-    <EditText
+    <com.staples.mobile.cfa.widget.EditTextWithImeBackEvent
         android:id="@+id/cartitem_qty_edittext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
