--- a/app/src/main/res/layout/sku_spec_item.xml
+++ b/app/src/main/res/layout/sku_spec_item.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<TableRow xmlns:android="http://schemas.android.com/apk/res/android">
     <TextView
         android:id="@+id/name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="4dp"/>
     <TextView
         android:id="@+id/text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="2dp"/>
 </TableRow>
