--- a/app/src/main/res/layout/create_account.xml
+++ b/app/src/main/res/layout/create_account.xml
@@ -7,26 +7,41 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/username"
-        android:hint="Username"
+        android:inputType="textEmailAddress"
+        android:ems="10"
+        android:id="@+id/emailIdRegister"
+        android:hint="Email"
         android:imeOptions="actionNext"
         android:singleLine="true"
         android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/userNameRegister"
+        android:hint="Username"
+        android:imeOptions="actionNext"
+        android:singleLine="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/emailIdRegister" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/password"
+        android:id="@+id/passwordRegister"
         android:hint="Password"
         android:imeOptions="actionNext"
         android:singleLine="true"
-        android:layout_below="@+id/username"
+        android:layout_below="@+id/userNameRegister"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
@@ -35,10 +50,10 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sign In"
-        android:id="@+id/submit_button"
-        android:layout_marginTop="50dp"
-        android:layout_below="@+id/password"
-        android:layout_centerHorizontal="true" />
+        android:text="Register"
+        android:id="@+id/register_button"
+        android:layout_marginTop="27dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/passwordRegister" />
 
 </RelativeLayout>
