--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -37,7 +37,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
                     android:orientation="horizontal">
-                    <include layout="@layout/create_account_fragment"/>
+                    <include layout="@layout/create_account"/>
                 </LinearLayout>
             </FrameLayout>
         </LinearLayout>
