--- a/app/src/main/res/layout/sku_spec_item.xml
+++ b/app/src/main/res/layout/sku_spec_item.xml
@@ -2,10 +2,8 @@
 <TableRow xmlns:android="http://schemas.android.com/apk/res/android">
     <TextView
         android:id="@+id/name"
-        android:layout_marginLeft="2dp"
-        android:layout_marginRight="4dp"/>
+        style="@style/SkuSpecNameStyle"/>
     <TextView
-        android:id="@+id/text"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="2dp"/>
+        android:id="@+id/value"
+        style="@style/SkuSpecValueStyle"/>
 </TableRow>
