--- a/app/src/main/res/layout/sku_summary.xml
+++ b/app/src/main/res/layout/sku_summary.xml
@@ -16,13 +16,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="6dp">
             <!-- Photos -->
             <android.support.v4.view.ViewPager
                 android:id="@+id/images"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:padding="6dp"/>
+                android:layout_height="150dp"/>
             <com.staples.mobile.cfa.widget.PagerStripe
                 android:id="@+id/stripe"
                 style="@style/PagerStripe"/>
@@ -98,12 +98,6 @@
                     <TextView
                         style="@style/SkuSummaryHeader"
                         android:text="@string/reviews"/>
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="4dp"
-                        android:textSize="16sp"
-                        android:text="@string/lorem_ipsum"/>
                 </LinearLayout>
                 <ImageView
                     android:id="@+id/review_detail"
