--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -76,7 +76,6 @@
     <style name="SkuSummaryHeader">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:padding">4dp</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textAllCaps">true</item>
@@ -87,7 +86,6 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">top|center_horizontal</item>
         <item name="android:paddingTop">9dp</item>
-        <item name="android:paddingLeft">6dp</item>
         <item name="android:paddingRight">3dp</item>
         <item name="android:src">@drawable/bullet</item>
     </style>
@@ -96,5 +94,17 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:padding">2dp</item>
         <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="SkuSpecStyle">
+        <item name="android:textSize">16dp</item>
+    </style>
+    <style name="SkuSpecNameStyle" parent="SkuSpecStyle">
+        <item name="android:paddingLeft">2dp</item>
+        <item name="android:paddingRight">4dp</item>
+    </style>
+    <style name="SkuSpecValueStyle" parent="SkuSpecStyle">
+        <item name="android:paddingLeft">4dp</item>
+        <item name="android:paddingRight">2dp</item>
     </style>
 </resources>
