--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -172,7 +172,7 @@
                             android:layout_below="@id/cart_shipping" />
                     </RelativeLayout>
                     <TextView
-                        android:id="@+id/cart_proceed"
+                        android:id="@+id/action_checkout"
                         android:layout_height="wrap_content"
                         android:layout_width="match_parent"
                         android:gravity="center"
