--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,7 +22,27 @@
         <item name="android:background">#ffff00</item>
     </style>
 
-	<style name="TextExtraLargeListItem">
+    <style name="CheckoutHeading">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#999999</item>
+    </style>
+
+    <style name="CheckoutFooter">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:padding">4dp</item>
+    </style>
+
+    <style name="CheckoutText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="TextExtraLargeListItem">
 		<item name="android:textSize">15sp</item>
 		<item name="android:textStyle">normal</item>
 		<item name="android:textColor">@color/sel_text_list_item</item>
