tweaking checkout page layout/UI

--- a/app/src/main/res/layout/checkout_fragment.xml
+++ b/app/src/main/res/layout/checkout_fragment.xml
@@ -12,9 +12,10 @@
         android:id="@+id/cart_title"
         android:layout_width="match_parent"
         style="@style/CartHeader"
+        android:textSize="24sp"
         android:text="@string/checkout_title"/>
 
-    <!-- Summary page contents -->
+    <!-- scrollable contents -->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -38,7 +39,7 @@
                     android:layout_weight="1"
                     android:orientation="vertical">
                     <TextView
-                        style="@style/CheckoutHeading"
+                        style="@style/CheckoutSubheading"
                         android:text="@string/shipping_addr"/>
                     <TextView
                         android:id="@+id/checkout_shipping_addr"
@@ -57,7 +58,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:paddingTop="8dp"
+                android:paddingTop="16dp"
                 >
                 <LinearLayout
                     android:layout_width="0dp"
@@ -65,7 +66,7 @@
                     android:layout_weight="1"
                     android:orientation="vertical">
                     <TextView
-                        style="@style/CheckoutHeading"
+                        style="@style/CheckoutSubheading"
                         android:text="@string/payment_method"/>
                     <TextView
                         android:id="@+id/checkout_payment_method"
@@ -84,7 +85,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:paddingTop="8dp"
+                android:paddingTop="16dp"
                 >
                 <LinearLayout
                     android:layout_width="0dp"
@@ -92,7 +93,7 @@
                     android:layout_weight="1"
                     android:orientation="vertical">
                     <TextView
-                        style="@style/CheckoutHeading"
+                        style="@style/CheckoutSubheading"
                         android:text="@string/billing_addr"/>
                     <TextView
                         android:id="@+id/checkout_billing_addr"
@@ -112,7 +113,8 @@
     <!-- delivery range -->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:background="#e6e6e6" >
         <TextView
             style="@style/CheckoutFooter"
             android:layout_width="wrap_content"
@@ -158,6 +160,8 @@
             style="@style/CheckoutFooter"
             android:layout_width="wrap_content"
             android:layout_alignParentLeft="true"
+            android:paddingTop="0dp"
+            android:paddingBottom="0dp"
             android:text="@string/shipping"
             />
         <TextView
@@ -165,6 +169,8 @@
             style="@style/CheckoutFooter"
             android:layout_width="wrap_content"
             android:layout_alignParentRight="true"
+            android:paddingTop="0dp"
+            android:paddingBottom="0dp"
             />
     </RelativeLayout>
 
