adding free shipping message (still needs actual threshold from lms, and still needs reconciliation with api returned shipping cost)

--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -150,6 +150,12 @@
                         android:id="@+id/cart_title"
                         android:layout_width="match_parent"
                         style="@style/CartHeader"/>
+                    <TextView
+                        android:id="@+id/free_shipping_msg"
+                        android:layout_width="match_parent"
+                        style="@style/CartHeader"
+                        android:textColor="#ffffff"
+                        />
                     <ListView
                         android:id="@+id/cart_list"
                         android:layout_width="match_parent"
