--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -7,6 +7,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="6dp"
+    android:background="#ffffff">
+
+<TextView
+    android:id="@+id/cartitem_shipping_estimate"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:textSize="12sp"/>
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="6dp"
     android:background="#ffffff">
@@ -74,3 +88,4 @@
     </LinearLayout>
 </LinearLayout>
 
+</LinearLayout>
