--- a/app/src/main/res/layout/checkout_fragment.xml
+++ b/app/src/main/res/layout/checkout_fragment.xml
@@ -2,8 +2,12 @@
 <!--
   ~ Copyright (c) 2014 Staples, Inc. All rights reserved.
   -->
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent" >
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.staples.mobile.cfa.cart.LinearLayoutWithProgressOverlay
+    android:id="@+id/checkout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -217,4 +221,21 @@
             />
     </RelativeLayout>
 
-</LinearLayout>
+</com.staples.mobile.cfa.cart.LinearLayoutWithProgressOverlay>
+
+<!-- progress whirly -->
+<RelativeLayout
+    android:id="@+id/checkout_progress_overlay"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:visibility="gone"
+    android:clickable="false"
+    android:background="#6f000022" >
+    <ProgressBar
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateOnly="true" />
+</RelativeLayout>
+
+</FrameLayout>
