--- a/app/src/main/res/layout/sku_accessory_item.xml
+++ b/app/src/main/res/layout/sku_accessory_item.xml
@@ -7,7 +7,14 @@
     android:padding="10dp">
     <ImageView
         android:id="@+id/accessory_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:scaleType="centerInside"
         android:layout_gravity="center"/>
+    <TextView
+        android:id="@+id/accessory_title"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="12sp"/>
 </LinearLayout>
