--- a/app/src/main/res/layout/sku_accessory_item.xml
+++ b/app/src/main/res/layout/sku_accessory_item.xml
@@ -17,16 +17,26 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textSize="12sp"/>
-    <TextView
-        android:id="@+id/accessory_price"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textSize="12sp"/>
-    <TextView
-        android:id="@+id/accessory_unit"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textSize="12sp"/>
+
+    <RelativeLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <View
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.2"/>
+            <com.staples.mobile.cfa.widget.PriceSticker
+                android:id="@+id/accessory_price"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textSize="17sp"
+                android:layout_weight="0.8"/>
+        </LinearLayout>
+    </RelativeLayout>
+
 </LinearLayout>
